Align M2 validator runtimes
