# backend/src/generated/java/com/kodeboxx/smartintake/generated/contract/LoginCsrfBootstrapResponse.java
@@ -1,0 +1,137 @@
+/*
+ * Smart Form Builder Lite API
+ * Normative M2 operation contract; entries marked contract-published do not claim runtime implementation.
+ *
+ * The version of the OpenAPI document: 4.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.kodeboxx.smartintake.generated.contract;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.kodeboxx.smartintake.generated.contract.LoginCsrfBootstrap;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+
+/**
+ * LoginCsrfBootstrapResponse
+ */
+@JsonPropertyOrder({
+  LoginCsrfBootstrapResponse.JSON_PROPERTY_REQUEST_ID,
+  LoginCsrfBootstrapResponse.JSON_PROPERTY_LOGIN_CSRF_BOOTSTRAP
+})
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.10.0")
+public class LoginCsrfBootstrapResponse {
+  public static final String JSON_PROPERTY_REQUEST_ID = "requestId";
+  @jakarta.annotation.Nonnull
+  private String requestId;
+
+  public static final String JSON_PROPERTY_LOGIN_CSRF_BOOTSTRAP = "loginCsrfBootstrap";
+  @jakarta.annotation.Nonnull
+  private LoginCsrfBootstrap loginCsrfBootstrap;
+
+  public LoginCsrfBootstrapResponse() {
+  }
+
+  public LoginCsrfBootstrapResponse requestId(@jakarta.annotation.Nonnull String requestId) {
+    
+    this.requestId = requestId;
+    return this;
+  }
+
+  /**
+   * Get requestId
+   * @return requestId
+   */
+  @jakarta.annotation.Nonnull
+  @JsonProperty(JSON_PROPERTY_REQUEST_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getRequestId() {
+    return requestId;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_REQUEST_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setRequestId(@jakarta.annotation.Nonnull String requestId) {
+    this.requestId = requestId;
+  }
+
+  public LoginCsrfBootstrapResponse loginCsrfBootstrap(@jakarta.annotation.Nonnull LoginCsrfBootstrap loginCsrfBootstrap) {
+    
+    this.loginCsrfBootstrap = loginCsrfBootstrap;
+    return this;
+  }
+
+  /**
+   * Get loginCsrfBootstrap
+   * @return loginCsrfBootstrap
+   */
+  @jakarta.annotation.Nonnull
+  @JsonProperty(JSON_PROPERTY_LOGIN_CSRF_BOOTSTRAP)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public LoginCsrfBootstrap getLoginCsrfBootstrap() {
+    return loginCsrfBootstrap;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_LOGIN_CSRF_BOOTSTRAP)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setLoginCsrfBootstrap(@jakarta.annotation.Nonnull LoginCsrfBootstrap loginCsrfBootstrap) {
+    this.loginCsrfBootstrap = loginCsrfBootstrap;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    LoginCsrfBootstrapResponse loginCsrfBootstrapResponse = (LoginCsrfBootstrapResponse) o;
+    return Objects.equals(this.requestId, loginCsrfBootstrapResponse.requestId) &&
+        Objects.equals(this.loginCsrfBootstrap, loginCsrfBootstrapResponse.loginCsrfBootstrap);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(requestId, loginCsrfBootstrap);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class LoginCsrfBootstrapResponse {\n");
+    sb.append("    requestId: ").append(toIndentedString(requestId)).append("\n");
+    sb.append("    loginCsrfBootstrap: ").append(toIndentedString(loginCsrfBootstrap)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
